--- a/dashboard_main.html
+++ b/dashboard_main.html
@@ -322,7 +322,7 @@
 
             <div class="reform-nav">
                 <!-- Power Sector -->
-                <div class="reform-card" onclick="navigateToPowerDashboard()">
+                <div class="reform-card" onclick="navigateTo('powerSectorPage')">
                     <div class="reform-icon">⚡</div>
                     <h3>Power Sector</h3>
                     <p>T&D Losses, Recovery Rates, Circular Debt Management, and Power Reform Initiatives</p>
@@ -332,7 +332,180 @@
                 <div class="reform-card" onclick="navigateTo('taxPage')">
                     <div class="reform-icon">💰</div>
                     <h3>Tax Reforms</h3>
-                    <p>Property Tax Collection, Assessment Rates, and Tax Policy Implementation</p>
+                    <p>Tax Revenue, Expenditure, Growth</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Power Sector Options Page -->
+        <div id="powerSectorPage" class="page">
+            <button class="nav-button back" onclick="navigateTo('reformPage')">← Back to Reform Tracking</button>
+            <div class="page-title">Power Sector - Select View</div>
+
+            <div class="reform-nav">
+                <!-- Live Dashboards -->
+                <div class="reform-card" onclick="navigateToPowerDashboard()">
+                    <div class="reform-icon">📊</div>
+                    <h3>Live Dashboards</h3>
+                    <p>Interactive real-time dashboards with maps, charts, and live data visualization for T&D losses, recovery rates, and circular debt</p>
+                </div>
+
+                <!-- Deep Dive -->
+                <div class="reform-card" onclick="navigateTo('powerDeepDivePage')">
+                    <div class="reform-icon">🔍</div>
+                    <h3>Deep Dive</h3>
+                    <p>Detailed analysis, research insights, and comprehensive reports on power sector reforms and initiatives</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Power Deep Dive Page -->
+        <div id="powerDeepDivePage" class="page">
+            <button class="nav-button back" onclick="navigateTo('powerSectorPage')">← Back to Power Sector</button>
+            <div class="page-title">Power Sector Deep Dive</div>
+
+            <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 30px;">
+                <h3 style="color: #1e3c72; margin-bottom: 20px; font-size: 1.8em;">📈 Comprehensive Power Sector Analysis</h3>
+                <div style="color: #555; line-height: 1.8; font-size: 1.1em;">
+                    <p><strong>Overview:</strong> Pakistan's power sector faces critical challenges including high T&D losses (17%), low recovery rates (88%), and mounting circular debt (2.84 trillion PKR). This section provides in-depth analysis and reform insights.</p>
+                </div>
+            </div>
+
+            <div class="reform-nav">
+                <div class="reform-card" onclick="navigateTo('deepDiveTDPage')">
+                    <div class="reform-icon">📉</div>
+                    <h3>T&D Losses Analysis</h3>
+                    <p>In-depth research, trends, and actionable insights on transmission and distribution losses</p>
+                </div>
+
+                <div class="reform-card" onclick="navigateTo('deepDiveRecoveryPage')">
+                    <div class="reform-icon">💰</div>
+                    <h3>Recovery Rates Research</h3>
+                    <p>Comprehensive analysis of collection rates, payment patterns, and recovery optimization strategies</p>
+                </div>
+
+                <div class="reform-card" onclick="navigateTo('deepDiveCircularDebtPage')">
+                    <div class="reform-icon">💳</div>
+                    <h3>Circular Debt Deep Dive</h3>
+                    <p>Detailed examination of circular debt causes, trajectory, and structural reform recommendations</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Deep Dive - T&D Losses Page -->
+        <div id="deepDiveTDPage" class="page">
+            <button class="nav-button back" onclick="navigateTo('powerDeepDivePage')">← Back to Deep Dive</button>
+            <div class="page-title">Deep Dive: T&D Losses Analysis</div>
+
+            <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 30px;">
+                <h3 style="color: #1e3c72; margin-bottom: 20px; font-size: 1.4em;">📊 Current State Analysis</h3>
+                <div style="color: #555; line-height: 1.8; font-size: 1em;">
+                    <p><strong>National Average:</strong> 17% (Target: 12% by 2027)</p>
+                    <p><strong>Technical Losses:</strong> ~8% (infrastructure aging, long transmission lines)</p>
+                    <p><strong>Non-Technical Losses:</strong> ~9% (theft, metering issues, billing errors)</p>
+                    <br/>
+                    <p><strong>Regional Breakdown:</strong></p>
+                    <ul style="margin-left: 20px; color: #666;">
+                        <li>Punjab: 14-16% (better infrastructure)</li>
+                        <li>Sindh: 18-22% (high theft incidence)</li>
+                        <li>KPK: 20-25% (terrain challenges)</li>
+                        <li>Balochistan: 25-30% (sparse population, long distances)</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);">
+                <h3 style="color: #1e3c72; margin-bottom: 20px; font-size: 1.4em;">💡 Reform Recommendations</h3>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px; margin-bottom: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Infrastructure Modernization</p>
+                    <p style="color: #666; margin-top: 10px;">Replace aging transformers and transmission lines. Estimated cost: 80B PKR over 5 years. Expected loss reduction: 3-4%</p>
+                </div>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px; margin-bottom: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Smart Metering</p>
+                    <p style="color: #666; margin-top: 10px;">Deploy 10M smart meters with real-time monitoring. Cost: 50B PKR. Expected loss reduction: 2-3%</p>
+                </div>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">AI-Powered Theft Detection</p>
+                    <p style="color: #666; margin-top: 10px;">Machine learning systems for anomaly detection. Cost: 5B PKR. Expected loss reduction: 1-2%</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Deep Dive - Recovery Rates Page -->
+        <div id="deepDiveRecoveryPage" class="page">
+            <button class="nav-button back" onclick="navigateTo('powerDeepDivePage')">← Back to Deep Dive</button>
+            <div class="page-title">Deep Dive: Recovery Rates Research</div>
+
+            <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 30px;">
+                <h3 style="color: #1e3c72; margin-bottom: 20px; font-size: 1.4em;">📊 Collection Performance Analysis</h3>
+                <div style="color: #555; line-height: 1.8; font-size: 1em;">
+                    <p><strong>National Average:</strong> 88% (Target: 93% by 2027)</p>
+                    <p><strong>Outstanding Receivables:</strong> ~450 billion PKR</p>
+                    <br/>
+                    <p><strong>Company Performance:</strong></p>
+                    <ul style="margin-left: 20px; color: #666;">
+                        <li>K-Electric: 94% (best performer - private sector)</li>
+                        <li>IESCO: 91% (improved governance)</li>
+                        <li>LESCO: 89% (population density challenges)</li>
+                        <li>PESCO: 78% (lowest - security and billing issues)</li>
+                        <li>QESCO: 72% (sparse population, enforcement challenges)</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);">
+                <h3 style="color: #1e3c72; margin-bottom: 20px; font-size: 1.4em;">💡 Recovery Enhancement Strategies</h3>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px; margin-bottom: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Digital Payment Infrastructure</p>
+                    <p style="color: #666; margin-top: 10px;">Expand mobile wallet integration, online banking, and automated payment options. Expected improvement: 5-7%</p>
+                </div>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px; margin-bottom: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Predictive Analytics</p>
+                    <p style="color: #666; margin-top: 10px;">AI models to identify high-risk defaulters and enable early intervention. Expected improvement: 3-4%</p>
+                </div>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Incentive Programs</p>
+                    <p style="color: #666; margin-top: 10px;">Reward timely payers with discounts, penalty waivers for chronic defaulters who clear dues. Expected improvement: 2-3%</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Deep Dive - Circular Debt Page -->
+        <div id="deepDiveCircularDebtPage" class="page">
+            <button class="nav-button back" onclick="navigateTo('powerDeepDivePage')">← Back to Deep Dive</button>
+            <div class="page-title">Deep Dive: Circular Debt Analysis</div>
+
+            <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 30px;">
+                <h3 style="color: #1e3c72; margin-bottom: 20px; font-size: 1.4em;">📊 Circular Debt Composition</h3>
+                <div style="color: #555; line-height: 1.8; font-size: 1em;">
+                    <p><strong>Current Stock:</strong> 2.84 trillion PKR (as of Nov 2024)</p>
+                    <p><strong>Monthly Flow:</strong> ~35 billion PKR (stabilized after reforms)</p>
+                    <br/>
+                    <p><strong>Key Contributing Factors:</strong></p>
+                    <ul style="margin-left: 20px; color: #666;">
+                        <li>T&D Losses: ~40% contribution (720B PKR annually)</li>
+                        <li>Low Recovery Rates: ~25% contribution (450B PKR annually)</li>
+                        <li>Tariff Differential: ~20% contribution (subsidies not paid on time)</li>
+                        <li>Delayed Payments: ~15% contribution (government/public sector dues)</li>
+                    </ul>
+                    <br/>
+                    <p><strong>Projection:</strong> Without reforms, debt will reach 3.5 trillion PKR by 2026. With integrated reforms, can be reduced to 2.2 trillion PKR.</p>
+                </div>
+            </div>
+
+            <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);">
+                <h3 style="color: #1e3c72; margin-bottom: 20px; font-size: 1.4em;">💡 Structural Reform Roadmap</h3>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px; margin-bottom: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Phase 1 (2025-2026): Loss Reduction</p>
+                    <p style="color: #666; margin-top: 10px;">Target T&D losses from 17% to 14%. Investment: 80B PKR. Expected annual savings: 250B PKR</p>
+                </div>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px; margin-bottom: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Phase 2 (2026-2027): Recovery Enhancement</p>
+                    <p style="color: #666; margin-top: 10px;">Target recovery from 88% to 92%. Investment: 30B PKR. Expected annual savings: 180B PKR</p>
+                </div>
+                <div style="border-left: 4px solid #2E7D32; padding-left: 20px;">
+                    <p style="color: #1B5E20; font-weight: 600; margin-bottom: 5px;">Phase 3 (2027-2028): Tariff Rationalization</p>
+                    <p style="color: #666; margin-top: 10px;">Gradual subsidy phase-out with social protection for vulnerable groups. Expected debt reduction: 400B PKR annually</p>
                 </div>
             </div>
         </div>
@@ -340,10 +513,50 @@
         <!-- Tax Page -->
         <div id="taxPage" class="page">
             <button class="nav-button back" onclick="navigateTo('reformPage')">← Back to Reform Tracking</button>
-            <div class="page-title">Tax Reforms Dashboard</div>
-            <div style="text-align: center; padding: 60px 20px; background: white; border-radius: 16px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);">
-                <p style="font-size: 1.2em; color: #666;">Tax Reforms Dashboard Content</p>
-                <p style="color: #999; margin-top: 20px;">This page will display tax collection data, assessment rates, and policy implementation metrics</p>
+            <div class="page-title">Tax Reforms</div>
+
+            <!-- Two Column Layout: Key Insights (Left) + FBR Analysis (Right) -->
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin-top: 30px; align-items: start;">
+                
+                <!-- LEFT: Key Tax Insights -->
+                <div style="background: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%); border-radius: 16px; padding: 40px; color: white; height: fit-content;">
+                    <h3 style="margin-bottom: 25px; font-size: 1.8em;">Key Tax Insights</h3>
+                    <div style="display: flex; flex-direction: column; gap: 20px;">
+                        <div style="background: rgba(255,255,255,0.15); padding: 25px; border-radius: 12px; backdrop-filter: blur(10px);">
+                            <div style="font-size: 2.5em; font-weight: bold; margin-bottom: 10px;">₨5.8T</div>
+                            <div style="font-size: 1em; opacity: 0.9;">Total FBR Collection FY24-25</div>
+                        </div>
+                        <div style="background: rgba(255,255,255,0.15); padding: 25px; border-radius: 12px; backdrop-filter: blur(10px);">
+                            <div style="font-size: 2.5em; font-weight: bold; margin-bottom: 10px; color: #FFD700;">22.5%</div>
+                            <div style="font-size: 1em; opacity: 0.9;">Avg Salaried Tax Rate</div>
+                        </div>
+                        <div style="background: rgba(255,255,255,0.15); padding: 25px; border-radius: 12px; backdrop-filter: blur(10px);">
+                            <div style="font-size: 2.5em; font-weight: bold; margin-bottom: 10px; color: #FF6B6B;">0.65</div>
+                            <div style="font-size: 1em; opacity: 0.9;">Income Elasticity (Declining)</div>
+                        </div>
+                        <div style="background: rgba(255,255,255,0.15); padding: 25px; border-radius: 12px; backdrop-filter: blur(10px);">
+                            <div style="font-size: 2.5em; font-weight: bold; margin-bottom: 10px;">48%</div>
+                            <div style="font-size: 1em; opacity: 0.9;">Salaried Class Tax Burden</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- RIGHT: FBR Tax Collection Analysis -->
+                <div class="reform-card" onclick="window.location.href='tax_dashboard.html'" style="cursor: pointer; height: fit-content; margin: 0;">
+                    <div class="reform-icon">📊</div>
+                    <h3>FBR Tax Collection Analysis</h3>
+                    <p>Comprehensive analysis of Federal Board of Revenue collections, income tax trends, salaried class burden, elasticity analysis, and Laffer Curve</p>
+                    <div style="margin-top: 20px; padding: 15px; background: rgba(33, 150, 243, 0.1); border-radius: 8px; border-left: 4px solid #2196F3;">
+                        <strong style="color: #2196F3;">📈 Featured Analysis:</strong>
+                        <ul style="margin: 10px 0 0 20px; line-height: 1.8;">
+                            <li>Tax collection by category (Income, Sales, Customs, Excise)</li>
+                            <li>Income tax breakdown by source (Salaried, Corporate, Business)</li>
+                            <li>Salaried class tax burden trend over 7 fiscal years</li>
+                            <li>Laffer Curve analysis & revenue optimization</li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
 
