--- a/td_loss_dashboard.html
+++ b/td_loss_dashboard.html
@@ -362,6 +362,7 @@
         <div style="display: flex; gap: 20px; align-items: center;">
             <a href="index.html" style="color: white; text-decoration: none; padding: 8px 15px; background: rgba(255,255,255,0.1); border-radius: 5px; transition: all 0.3s; font-weight: 500;">Home</a>
             <a href="td_loss_dashboard.html" style="color: white; text-decoration: none; padding: 8px 15px; background: rgba(255,255,255,0.2); border-radius: 5px; transition: all 0.3s; font-weight: 500;">T&D Loss Dashboard</a>
+            <a href="tax_dashboard.html" style="color: white; text-decoration: none; padding: 8px 15px; background: rgba(255,255,255,0.1); border-radius: 5px; transition: all 0.3s; font-weight: 500;">Tax Dashboard</a>
         </div>
     </div>
 
