--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
 
             <div class="dashboard-main">
                 <!-- Reform Tracking Card -->
-                <div class="dashboard-card" onclick="window.location.href='reform_tracking.html'">
+                <div class="dashboard-card" onclick="window.location.href='pages/reform_tracking.html'">
                     <div class="card-icon">📊</div>
                     <h2>Reform Tracking</h2>
                     <p>Monitor government initiatives and reform programs across various sectors including Power, Tax, and more</p>
                 </div>
 
                 <!-- AI Research Card -->
-                <div class="dashboard-card" onclick="window.location.href='ai_research.html'">
+                <div class="dashboard-card" onclick="window.location.href='pages/ai/ai_research.html'">
                     <div class="card-icon">🤖</div>
                     <h2>AI Research Summary</h2>
                     <p>Track active research projects, deployed AI models, and performance metrics across different research areas</p>
@@ -644,7 +644,7 @@
             <!-- Two Options Side by Side -->
             <div class="reform-nav" style="grid-template-columns: repeat(2, 1fr);">
                 <!-- Real Time Dashboard -->
-                <div class="reform-card" onclick="window.location.href='tax_dashboard.html'">
+                <div class="reform-card" onclick="window.location.href='pages/dashboards/tax_dashboard.html'">
                     <div class="reform-icon">📊</div>
                     <h3>Real Time Dashboard</h3>
                     <p>Interactive dashboards with charts and visualizations for FBR tax collections, income tax trends, salaried class burden, elasticity analysis, and Laffer Curve</p>
@@ -1433,7 +1433,7 @@
 
         function navigateToPowerDashboard() {
             // Redirect to the power dashboard (index.html)
-            window.location.href = 'td_loss_dashboard.html';
+            window.location.href = 'pages/dashboards/td_loss_dashboard.html';
         }
 
         // Initialize on page load
