--- a/pages/sectors/tax/tax_sector.html
+++ b/pages/sectors/tax/tax_sector.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Power Sector - Pakistan Dashboard</title>
+    <title>Tax Reforms - Pakistan Dashboard</title>
     <style>
         * {
             margin: 0;
@@ -99,6 +99,43 @@
             font-weight: 700;
         }
 
+        .insights-box {
+            background: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%);
+            border-radius: 16px;
+            padding: 40px;
+            margin-bottom: 40px;
+            color: white;
+        }
+
+        .insights-box h3 {
+            margin-bottom: 25px;
+            font-size: 1.8em;
+        }
+
+        .insights-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 25px;
+        }
+
+        .insight-card {
+            background: rgba(255,255,255,0.15);
+            padding: 25px;
+            border-radius: 12px;
+            backdrop-filter: blur(10px);
+        }
+
+        .insight-value {
+            font-size: 2.5em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .insight-label {
+            font-size: 1em;
+            opacity: 0.9;
+        }
+
         .reform-nav {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -164,6 +201,9 @@
             .reform-nav {
                 grid-template-columns: 1fr;
             }
+            .insights-grid {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
@@ -185,20 +225,44 @@
     </div>
 
     <div class="container">
-        <a href="reform_tracking.html" class="nav-button">← Back to Reform Tracking</a>
-        <div class="page-title">Power Sector - Select View</div>
+        <a href="../../reform_tracking.html" class="nav-button">← Back to Reform Tracking</a>
+        <div class="page-title">Tax Reforms</div>
 
+        <!-- Key Tax Insights -->
+        <div class="insights-box">
+            <h3>📊 Key Tax Insights</h3>
+            <div class="insights-grid">
+                <div class="insight-card">
+                    <div class="insight-value">₨5.8T</div>
+                    <div class="insight-label">Total FBR Collection FY24-25</div>
+                </div>
+                <div class="insight-card">
+                    <div class="insight-value" style="color: #FFD700;">22.5%</div>
+                    <div class="insight-label">Avg Salaried Tax Rate</div>
+                </div>
+                <div class="insight-card">
+                    <div class="insight-value" style="color: #FF6B6B;">0.65</div>
+                    <div class="insight-label">Income Elasticity (Declining)</div>
+                </div>
+                <div class="insight-card">
+                    <div class="insight-value">48%</div>
+                    <div class="insight-label">Salaried Class Tax Burden</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Two Options -->
         <div class="reform-nav">
-            <a href="td_loss_dashboard.html" class="reform-card">
+            <a href="../../dashboards/tax_dashboard.html" class="reform-card">
                 <div class="reform-icon">📊</div>
                 <h3>Real Time Dashboard</h3>
-                <p>Interactive live dashboards with maps, charts, and real-time data visualization for T&D losses, recovery rates, and circular debt</p>
+                <p>Interactive dashboards with charts and visualizations for FBR tax collections, income tax trends, salaried class burden, elasticity analysis, and Laffer Curve</p>
             </a>
 
-            <a href="power_deep_dive.html" class="reform-card">
+            <a href="tax_deep_dive.html" class="reform-card">
                 <div class="reform-icon">🔍</div>
                 <h3>Deep Dive Analysis</h3>
-                <p>Detailed analysis, research insights, and comprehensive reports on power sector reforms and policy recommendations</p>
+                <p>Comprehensive research, policy analysis, and detailed insights on tax reform strategies and revenue optimization</p>
             </a>
         </div>
     </div>
